fix font colour on safari in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ html body {
 	background-color: var(--primary);
 }
 
-body,
+html body,
 button {
 	color: var(--text);
 }
